--- a/dashboard.css
+++ b/dashboard.css
@@ -1276,7 +1276,7 @@ s
         width: 100%;
     }
     .main-body .bottom-card .pseudo-card .p-card1, .p-card2 {
-        width: 190xpx;
+        width: 190px;
         height: 130px;
     }
     .header-left {
